<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.iguest.evolve.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textView"
        android:visibility="visible"
        android:singleLine="false"
        android:autoText="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25dp"
        android:textIsSelectable="true"
        android:height="50dp" />

    <!--<ImageView-->
        <!--android:layout_width="220dp"-->
        <!--android:layout_height="143dp"-->
        <!--android:id="@+id/imageView2"-->
        <!--android:src="@mipmap/eye"-->
        <!--android:contentDescription="eye"-->
        <!--android:layout_alignWithParentIfMissing="false"-->
        <!--android:layout_marginLeft="59dp"-->
        <!--android:layout_below="@+id/textView"-->
        <!--android:layout_toRightOf="@+id/textView"-->
        <!--android:layout_toEndOf="@+id/textView"-->
        <!--android:layout_marginStart="59dp" />-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="170dp"
        android:text="@string/key_facts"
        android:id="@+id/textView2"
        android:background="#baffd8"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="135dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:textSize="16dp"
        android:focusable="false"
        android:textStyle="bold"
        android:height="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/how_common"
        android:id="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:lineSpacingMultiplier="1.2"
        android:textSize="12dp"
        android:layout_marginTop="50dp"
        android:singleLine="false" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/textView4"
        android:textSize="12dp"
        android:nestedScrollingEnabled="false"
        android:layout_marginTop="20dp"
        android:lineSpacingMultiplier="1.2"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fact_1"
        android:id="@+id/textView5"
        android:paddingLeft="10dp"
        android:textSize="12dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:lineSpacingMultiplier="1.2"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fact_2"
        android:textSize="12dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:textStyle="bold"
        android:lineSpacingMultiplier="1.2"
        android:id="@+id/textView6"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fact_3"
        android:id="@+id/textView7"
        android:textSize="12dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:lineSpacingMultiplier="1.2"
        android:layout_below="@+id/textView6"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fact_4"
        android:id="@+id/textView8"
        android:textSize="12dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:lineSpacingMultiplier="1.2"
        android:layout_below="@+id/textView7"
        android:paddingRight="5dp" />


</RelativeLayout>
</ScrollView>
